--- a/.env
+++ b/.env
@@ -2,4 +2,8 @@ FLASK_APP=app
 FLASK_ENV=development
 
 # Once you add your API key below, make sure to not share it with anyone! The API key should remain private.
-OPENAI_API_KEY= <API_KEY>
+OPENAI_API_KEY=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
+
+#
+GOOGLE_CLIENT_ID='591890811559-v19l4d3houm7vj8jtcikpvncate9ina6.apps.googleusercontent.com'
+GOOGLE_CLIENT_SECRET='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'
