--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ FLASK_APP=app
 FLASK_ENV=development
 
 # Once you add your API key below, make sure to not share it with anyone! The API key should remain private.
-OPENAI_API_KEY=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
+OPENAI_API_KEY=
 #
 GOOGLE_CLIENT_ID='591890811559-v19l4d3houm7vj8jtcikpvncate9ina6.apps.googleusercontent.com'
 GOOGLE_CLIENT_SECRET='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'
