--- a/.env
+++ b/.env
@@ -2,8 +2,7 @@ FLASK_APP=app
 FLASK_ENV=development
 
 # Once you add your API key below, make sure to not share it with anyone! The API key should remain private.
-OPENAI_API_KEY=
-#
+OPENAI_API_KEY=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
+
 GOOGLE_CLIENT_ID='591890811559-v19l4d3houm7vj8jtcikpvncate9ina6.apps.googleusercontent.com'
 GOOGLE_CLIENT_SECRET='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'
-# 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
